Fix for bug 100591. We need to replace illegal characters in file name before trying to use it during a file save. R=cavin, law, SR=alecf, mscott